Bug 918551 - improve icon-label alignment in menupanel, rs=mak
UltraBlame original commit: f20417eb9e12bde7d6f3b3d696d0767a0bde4151

--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -1387,195 +1387,6 @@ calc
 )
 ;
 }
-toolbarbutton
-[
-customizableui
--
-areatype
-=
-"
-menu
--
-panel
-"
-]
->
-.
-toolbarbutton
--
-icon
-[
-label
-]
-:
-not
-(
-[
-label
-=
-"
-"
-]
-)
-toolbaritem
-[
-customizableui
--
-areatype
-=
-"
-menu
--
-panel
-"
-]
->
-toolbarbutton
->
-.
-toolbarbutton
--
-icon
-[
-label
-]
-:
-not
-(
-[
-label
-=
-"
-"
-]
-)
-toolbarpaletteitem
-[
-place
-=
-"
-palette
-"
-]
->
-toolbarbutton
->
-.
-toolbarbutton
--
-icon
-[
-label
-]
-:
-not
-(
-[
-label
-=
-"
-"
-]
-)
-toolbarpaletteitem
-[
-place
-=
-"
-palette
-"
-]
->
-toolbaritem
->
-toolbarbutton
->
-.
-toolbarbutton
--
-icon
-[
-label
-]
-:
-not
-(
-[
-label
-=
-"
-"
-]
-)
-toolbarpaletteitem
-[
-place
-=
-"
-panel
-"
-]
->
-toolbarbutton
->
-.
-toolbarbutton
--
-icon
-[
-label
-]
-:
-not
-(
-[
-label
-=
-"
-"
-]
-)
-toolbarpaletteitem
-[
-place
-=
-"
-panel
-"
-]
->
-toolbaritem
->
-toolbarbutton
->
-.
-toolbarbutton
--
-icon
-[
-label
-]
-:
-not
-(
-[
-label
-=
-"
-"
-]
-)
-{
--
-moz
--
-margin
--
-end
-:
-0
-;
-}
 toolbarpaletteitem
 [
 place
